v6.3
-----


v6.2.1
-----
+ Added inventory market data to other user's inventories
+ Added avg price of 3 cards to booster packs in inventory

v6.2
-----
+ Added option to set which homepage tab displays by default
+ Rewrote custom profile background selection dialog
+ Added a link to a game's AStats page in the achievement section on app pages
+ Added support for Humble Widgets in price comparisons
: Fixed a bug where Legend of Grimrock store page could inadvertently show incorrect DRM warnings
- Removed market data on inventory items, as this feature was implemented by Valve
- Removed achievement section on app pages, as this was re-implemented by Valve

v6.1.1
-----
: Fixed a bug with account total not being correct for Russian currencies
: Fixed a bug on homepage layout due to a change made by Valve
: Fixed a bug where the "popular" tab wouldn't always show correctly
: Fixed a bug where the market summary would display incorrectly due to a change made by Valve

v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Store pages now display a full size background
+ Gift transactions are now separated out in total spent section of account page
+ Selecting booster packs in your inventory now shows the average price of three cards for that game
+ Added option to only search within product names
+ Added inventory marketplace support for Battleblock Theater items
+ Added a loading dialog to custom profile background selection
+ Added price history support for Gameolith and Fireflower Games, removed Beamdog support
+ Added a secret...
: Fixed a bug that caused price comparison overlays to be partially hidden in some circumstances
: Fixed a bug that sometimes caused purchase date to be incorrect after buying the game as a gift
: Fixed a bug which would cause CS:GO items not to get market data in non-English languages

v6.0.1
-----
+ Added filter to the new release section that will filter out older games (thanks TotalBiscuit!)